--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Archer</title>
+        <style>
+            body {
+                display: flex;
+                justify-content: center;
+                align-self: center;
+                background-color: gray;
+            }
+        </style>
     </head>
     <body>
         <script src="script.js" type="module"></script>
